<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crazyflie_ros2_multiranger_bringup</name>
  <version>0.0.0</version>
  <description>Launch and config files for the crazyflie_ros2_multiranger nodes</description>
  <maintainer email="kimberly@bitcraze.io">Kimberly McGuire</maintainer>
  <license>MIT</license>
  <depend>ros_gz_crazyflie_bringup</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
